# isl_translator-mini

./: Model.py  README.md  convert_csv_dual_hand_support.py  create_dataset_dual_hand.py  detect_dual_hand.py  hand_gesture_model_dual.pth  helper.py  label_mapping_dual.npy  main_dual_hand.py  pyproject.toml
